Work on AppTheme/Color scheme + viewCurrentGroups

--- a/GiftExchange/app/src/main/res/layout/activity_view_current_groups.xml
+++ b/GiftExchange/app/src/main/res/layout/activity_view_current_groups.xml
@@ -9,4 +9,33 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.ucsd.cse110wi16.giftexchange.viewCurrentGroups">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add New Group"
+        android:id="@+id/bttnAddGroup"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+
+
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_above="@+id/bttnAddGroup"
+            android:layout_alignParentTop="true">
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true">
+
+                    </TableRow>
+
+        </TableLayout>
 </RelativeLayout>
