Work on login screen & account creation

--- a/GiftExchangeApplication/app/src/main/res/layout/activity_main.xml
+++ b/GiftExchangeApplication/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,15 @@
     <RelativeLayout
         android:id="@+id/active_groups"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="440dp">
 
     </RelativeLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/bttnDEBUG"
+        android:text="Go to LoginActivity"
+        android:onClick="sendToLogin"/>
 
 </LinearLayout>
