--- a/GiftExchangeApplication/app/src/main/res/values/dimens.xml
+++ b/GiftExchangeApplication/app/src/main/res/values/dimens.xml
@@ -3,4 +3,8 @@
 
     <!-- Dimension for text -->
     <dimen name="list_item_text_size">16.6sp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
