--- a/GiftExchangeApplication/app/src/main/res/layout/content_create_acct.xml
+++ b/GiftExchangeApplication/app/src/main/res/layout/content_create_acct.xml
@@ -10,7 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ui.createAccount.CreateAcctActivity"
-    tools:showIn="@layout/activity_create_acct">
+    tools:showIn="@layout/activity_create_acct"
+    android:background="#000000">
 
 <EditText
     android:layout_width="wrap_content"
@@ -18,10 +19,15 @@
     android:inputType="textPassword"
     android:ems="10"
     android:id="@+id/editText"
-    android:layout_above="@+id/button4"
-    android:layout_alignLeft="@+id/editText3"
-    android:layout_alignStart="@+id/editText3"
-    android:layout_marginBottom="182dp" />
+    android:hint="Password"
+    android:textColorHint="#ffffff"
+    android:textColor="#ffffff"
+    android:layout_marginTop="34dp"
+    android:layout_below="@+id/editText3"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_alignRight="@+id/editText3"
+    android:layout_alignEnd="@+id/editText3" />
 
 <EditText
     android:layout_width="wrap_content"
@@ -29,21 +35,28 @@
     android:inputType="textPassword"
     android:ems="10"
     android:id="@+id/editText2"
-    android:layout_above="@+id/button4"
-    android:layout_alignLeft="@+id/editText"
-    android:layout_alignStart="@+id/editText"
-    android:layout_marginBottom="77dp" />
+    android:hint="Confirm Password"
+    android:textColor="#ffffff"
+    android:textColorHint="#ffffff"
+    android:layout_marginTop="29dp"
+    android:layout_below="@+id/editText"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true" />
 
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Create Account"
+    android:text="       Create Account        "
     android:id="@+id/button4"
-    android:layout_alignParentBottom="true"
-    android:layout_alignRight="@+id/editText2"
-    android:layout_alignEnd="@+id/editText2"
-    android:layout_marginBottom="56dp"
-    android:onClick="createNewAccount" />
+    android:onClick="createNewAccount"
+    android:layout_marginTop="32dp"
+    android:background="#647d314a"
+    android:textColor="#ffffff"
+    android:textSize="20dp"
+    android:layout_below="@+id/editText2"
+    android:layout_centerHorizontal="true" />
 
 <EditText
     android:layout_width="wrap_content"
@@ -51,35 +64,25 @@
     android:inputType="textEmailAddress"
     android:ems="10"
     android:id="@+id/editText3"
-    android:layout_above="@+id/editText"
-    android:layout_centerHorizontal="true"
-    android:layout_marginBottom="83dp" />
+    android:hint="Email Address"
+    android:textColorHint="#ffffff"
+    android:textColor="#ffffff"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_marginTop="67dp"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true" />
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="email"
-    android:id="@+id/textView7"
-    android:layout_above="@+id/editText3"
-    android:layout_alignLeft="@+id/editText3"
-    android:layout_alignStart="@+id/editText3" />
-
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Password"
-    android:id="@+id/textView8"
-    android:layout_above="@+id/editText"
-    android:layout_alignLeft="@+id/editText"
-    android:layout_alignStart="@+id/editText" />
-
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Re-enter Password"
-    android:id="@+id/textView9"
-    android:layout_above="@+id/editText2"
-    android:layout_alignLeft="@+id/editText2"
-    android:layout_alignStart="@+id/editText2" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Already have an account? Sign in."
+        android:id="@+id/txtSignIn"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="46dp"
+        android:textColor="#ffffff"
+        android:onClick="goLogin" />
 
 </RelativeLayout>
