UPDATE: merging local files with Github branch

--- a/GiftExchangeApplication/app/src/main/res/layout/activity_active_group_details.xml
+++ b/GiftExchangeApplication/app/src/main/res/layout/activity_active_group_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
+    android:background="@color/background"
     tools:context=".ui.activeGroupDetails.ActiveGroupDetailsActivity">
 
     <LinearLayout
@@ -13,6 +13,7 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
+            android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:theme="@style/Toolbar" />
