--- a/GiftExchangeApplication/app/src/main/res/layout/single_active_group.xml
+++ b/GiftExchangeApplication/app/src/main/res/layout/single_active_group.xml
@@ -21,4 +21,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <!-- TextView that shows the text "Managed by "-->
+    <TextView
+        android:id="@+id/managed_by"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text_view_group_name"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="2dp"
+        android:text="Managed by"
+        android:textColor="@color/light_black"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/text_view_managed_by_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text_view_group_name"
+        android:layout_marginTop="2dp"
+        android:layout_toEndOf="@+id/managed_by"
+        android:layout_toRightOf="@+id/managed_by"
+        android:textSize="12sp"
+        android:textStyle="bold" />
+
 </RelativeLayout>
