--- a/GiftExchangeApplication/app/src/main/res/values/dimens.xml
+++ b/GiftExchangeApplication/app/src/main/res/values/dimens.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
     <!-- Dimension for text -->
     <dimen name="list_item_text_size">16.6sp</dimen>
+    <dimen name="login_buttons_text_size">15.3sp</dimen>
+
+    <dimen name="edit_text_padding">14dp</dimen>
+
+    <dimen name="lists_title_bottom_margin">13dp</dimen>
+
+    <dimen name="margin_normal">37dp</dimen>
+    <dimen name="margin_small">16dp</dimen>
+    <dimen name="input_field_height">50dp</dimen>
+    <dimen name="lv_header_text_size">10sp</dimen>
+
+
+
 </resources>
