--- a/GiftExchangeApplication/app/src/main/res/layout/activity_login.xml
+++ b/GiftExchangeApplication/app/src/main/res/layout/activity_login.xml
@@ -16,8 +16,7 @@
         android:paddingBottom="16dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingTop="16dp"
-        android:background="@drawable/background_loginscreen">
+        android:paddingTop="16dp">
 
         <LinearLayout
             android:layout_width="0px"
@@ -56,7 +55,7 @@
                 android:textColor="@android:color/white"
                 android:textColorHint="@android:color/white"
                 android:textSize="@dimen/login_buttons_text_size"
-                android:gravity="center"/>
+                android:gravity="center" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Password EditText -->
