--- a/GiftExchangeApplication/app/src/main/res/layout/activity_main.xml
+++ b/GiftExchangeApplication/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,15 @@
         android:layout_height="?attr/actionBarSize"
         android:theme="@style/Toolbar"/>
 
-    <RelativeLayout
-        android:id="@+id/active_groups"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:theme="@style/Toolbar" />
 
-    </RelativeLayout>
-
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
