--- a/GiftExchangeApplication/app/src/main/res/values/styles.xml
+++ b/GiftExchangeApplication/app/src/main/res/values/styles.xml
@@ -6,6 +6,10 @@
         <item name="android:layout_margin">2dp</item>
     </style>
 
+    <style name="HintText">
+        <item name="android:textSize">0dp</item>
+    </style>
+
     <style name="FAB">
         <item name="android:layout_margin">15dp</item>
         <item name="fabSize">normal</item>
@@ -13,8 +17,32 @@
         <item name="backgroundTint">@color/primary</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Widget.Udacity.Button.Login" parent="android:Widget.Button">
+        <item name="android:paddingLeft">18dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:textSize">@dimen/login_buttons_text_size</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="LoginTextFields">
+        <item name="android:paddingLeft">18dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:textSize">@dimen/login_buttons_text_size</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="LoginCreateText">
+        <item name="android:textSize">@dimen/login_buttons_text_size</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:layout_margin">2dp</item>
+    </style>
+
+    <style name="LoginCreateTextButton">
+        <item name="android:textSize">@dimen/login_buttons_text_size</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:layout_margin">2dp</item>
+        <item name="android:clickable">true</item>
+    </style>
 
 </resources>
