--- a/GiftExchangeApplication/app/src/main/res/menu/menu_user_profile.xml
+++ b/GiftExchangeApplication/app/src/main/res/menu/menu_user_profile.xml
@@ -2,18 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ui.MainActivity">
+    tools:context=".ui.userProfile.UserProfileActivity">
 
-    <item
-        android:id="@+id/action_user_profile"
-        android:orderInCategory="100"
-        android:title="View Profile"
-        android:visible="false"
-        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_logout"
-        android:orderInCategory="200"
+        android:orderInCategory="100"
         android:title="Logout"
         android:visible="false"
         app:showAsAction="never" />
