--- a/GiftExchangeApplication/app/src/main/res/values/dimens.xml
+++ b/GiftExchangeApplication/app/src/main/res/values/dimens.xml
@@ -17,6 +17,7 @@
     <dimen name="margin_small">16dp</dimen>
     <dimen name="input_field_height">50dp</dimen>
     <dimen name="lv_header_text_size">10sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 
 
