--- a/GiftExchangeApplication/app/src/main/res/layout/activity_active_group_details.xml
+++ b/GiftExchangeApplication/app/src/main/res/layout/activity_active_group_details.xml
@@ -18,6 +18,54 @@
             android:layout_height="?attr/actionBarSize"
             android:theme="@style/Toolbar" />
 
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_margin="15dp">
+
+            <Button
+                android:id="@+id/btn_invite_user"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/input_field_height"
+                android:background="@color/primary"
+                android:onClick="onInviteButtonPressed"
+                android:text="@string/invite_user"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/login_buttons_text_size" />
+
+
+            <ListView
+                android:id="@+id/list_view_users"
+                android:layout_width="match_parent"
+                android:layout_height="335dp"
+                android:scrollbars="none"/>
+
+            <Button
+                android:id="@+id/btn_instant_sort"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/input_field_height"
+                android:background="@color/primary"
+                android:onClick="instantSortButton"
+                android:text="Instant Sort"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/login_buttons_text_size" />
+
+            <TextView
+                android:id="@+id/match_email"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/input_field_height"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/login_buttons_text_size" />
+
+
+        </LinearLayout>
+        </ScrollView>
+
 
     </LinearLayout>
 
