--- a/GiftExchangeApplication/app/src/main/res/menu/menu_main.xml
+++ b/GiftExchangeApplication/app/src/main/res/menu/menu_main.xml
@@ -5,15 +5,15 @@
     tools:context="ui.MainActivity">
 
     <item
-        android:id="@+id/action_user_profile"
-        android:orderInCategory="100"
-        android:title="View Profile"
+        android:id="@+id/action_sort"
+        android:icon="@drawable/ic_sort_white"
+        android:title="Sort"
         android:visible="false"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_logout"
-        android:orderInCategory="200"
+        android:orderInCategory="100"
         android:title="Logout"
         android:visible="false"
         app:showAsAction="never" />
