UPDATE: Google Login intergration, heavy UI work, user account code & all the above

--- a/GiftExchangeApplication/app/src/main/res/menu/menu_main.xml
+++ b/GiftExchangeApplication/app/src/main/res/menu/menu_main.xml
@@ -15,6 +15,6 @@
         android:id="@+id/action_logout"
         android:orderInCategory="200"
         android:title="Logout"
-        android:visible="false"
+        android:visible="true"
         app:showAsAction="never" />
 </menu>
