--- a/GiftExchangeApplication/app/src/main/res/layout/activity_login.xml
+++ b/GiftExchangeApplication/app/src/main/res/layout/activity_login.xml
@@ -95,6 +95,12 @@
             android:text="@string/button_signin_with_password"
             android:textColor="@android:color/white" />
 
+        <!-- Google login button -->
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/login_with_google"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <!-- Create account link -->
         <LinearLayout
             android:layout_width="match_parent"
