--- a/GiftExchangeApplication/app/src/main/res/layout/fragment_group_list.xml
+++ b/GiftExchangeApplication/app/src/main/res/layout/fragment_group_list.xml
@@ -19,7 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:scrollbars="none"/>
+            android:scrollbars="none"
+            android:dividerHeight="15dp"/>
 
     </LinearLayout>
 
