--- a/GiftExchangeApplication/app/src/main/res/menu/menu_base.xml
+++ b/GiftExchangeApplication/app/src/main/res/menu/menu_base.xml
@@ -8,7 +8,7 @@
         android:id="@+id/action_logout"
         android:orderInCategory="100"
         android:title="Logout"
-        android:visible="false"
+        android:visible="true"
         app:showAsAction="never"/>
 
 </menu>
