--- a/GiftExchangeApplication/app/src/main/res/values/colors.xml
+++ b/GiftExchangeApplication/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="primary">#7D314A</color>
     <color name="primary_dark">#541E30</color>
 
-    <color name="accent">#7D314A</color>
+    <color name="accent">#CE6789</color>
     <color name="background">#220C13</color>
 
     <color name="black">#616161</color>
