--- a/GiftExchangeApplication/app/src/main/res/values/themes.xml
+++ b/GiftExchangeApplication/app/src/main/res/values/themes.xml
@@ -11,6 +11,10 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
 
+        <item name="android:colorBackground">@color/primary</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">#fcfcfc</item>
+
     </style>
 
     <style name ="Toolbar" parent="Widget.AppCompat.Light.ActionBar">
