--- a/GiftExchangeApplication/app/src/main/res/layout/activity_active_group_details.xml
+++ b/GiftExchangeApplication/app/src/main/res/layout/activity_active_group_details.xml
@@ -27,38 +27,51 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_margin="15dp">
-
-            <Button
-                android:id="@+id/btn_invite_user"
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/input_field_height"
-                android:background="@color/primary"
-                android:onClick="onInviteButtonPressed"
-                android:text="@string/invite_user"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/login_buttons_text_size" />
+                android:layout_height="wrap_content"
+                android:id="@+id/title_days_until_sort"
+                android:layout_weight="0.03"
+                android:textSize="30dp"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:background="#FFFFFF" />
 
+            <TextView
+                android:layout_width="364dp"
+                android:layout_height="wrap_content"
+                android:text="@string/title_sorting_on"
+                android:id="@+id/title_sorting_on"
+                android:layout_gravity="center_horizontal"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:background="#FFFFFF" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/desc_pre_sort_blacklist"
+                android:id="@+id/desc_presort_blacklist"
+                android:layout_weight="0.01"
+                android:paddingTop="5dp"
+                android:textColor="#000000"
+                android:background="#FFFFFF" />
 
             <ListView
                 android:id="@+id/list_view_users"
                 android:layout_width="match_parent"
-                android:layout_height="335dp"
-                android:scrollbars="none"/>
+                android:layout_height="287dp"
+                android:scrollbars="none"
+                android:layout_weight="5.55"
+                android:background="#FFFFFF" />
 
             <Button
-                android:id="@+id/btn_instant_sort"
+                android:id="@+id/btn_save_blacklist"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/input_field_height"
                 android:background="@color/primary"
-                android:onClick="instantSortButton"
-                android:text="Instant Sort"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/login_buttons_text_size" />
-
-            <TextView
-                android:id="@+id/match_email"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/input_field_height"
+                android:onClick="onSaveBlacklist"
+                android:text="Save Preferences"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/login_buttons_text_size" />
 
