work on post sort

--- a/GiftExchangeApplication/app/src/main/res/layout/activity_post_sort.xml
+++ b/GiftExchangeApplication/app/src/main/res/layout/activity_post_sort.xml
@@ -55,7 +55,7 @@ tools:context=".ui.activeGroups.PostSortActivity">
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
+        android:id="@+id/txt_match"
         android:layout_toRightOf="@+id/imageView2"
         android:layout_alignRight="@+id/textView"
         android:layout_alignEnd="@+id/textView"
