--- a/GiftX/app/src/main/res/layout/activity_login.xml
+++ b/GiftX/app/src/main/res/layout/activity_login.xml
@@ -19,11 +19,11 @@
         android:paddingRight="16dp"
         android:paddingTop="16dp">
 
-        <LinearLayout
-            android:layout_width="0px"
-            android:layout_height="0px"
-            android:focusable="true"
-            android:focusableInTouchMode="true" />
+        <!--<LinearLayout-->
+        <!--android:layout_width="0px"-->
+        <!--android:layout_height="0px"-->
+        <!--android:focusable="true"-->
+        <!--android:focusableInTouchMode="true" />-->
 
         <!--Slogan -->
         <TextView
@@ -33,8 +33,7 @@
             android:contentDescription=""
             android:text="@string/app_slogan"
             android:textSize="20sp"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="200dp" />
+            android:textColor="@android:color/white" />
 
         <!-- Email EditText -->
         <android.support.design.widget.TextInputLayout
