--- a/GiftX/app/src/main/res/layout/activity_admin_settings.xml
+++ b/GiftX/app/src/main/res/layout/activity_admin_settings.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.adminSettings.AdminSettingsActivity">
+    tools:context="cse110.giftX.ui.adminSettings.AdminSettingsActivity">
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
