--- a/GiftX/app/src/main/res/layout/activity_create_group.xml
+++ b/GiftX/app/src/main/res/layout/activity_create_group.xml
@@ -77,7 +77,7 @@
                     android:text="Start"
                     android:layout_marginRight="20dp"/>
 
-                <Button
+                <TextView
                     android:id="@+id/edit_text_start_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -85,17 +85,19 @@
                     android:textStyle="normal"
                     android:layout_marginEnd="20dp"
                     android:layout_marginRight="20dp"
-                    android:hint="Select"
+                    android:paddingEnd="20dp"
+                    android:paddingRight="20dp"
+                    android:hint="@string/choose_date"
                     android:onClick="onStartDateClicked"
                     android:background="@android:color/transparent"/>
 
-                <Button
+                <TextView
                     android:id="@+id/edit_text_start_time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical|end"
                     android:textSize="14sp"
-                    android:hint="7:00PM"
+                    android:hint="@string/set_time"
                     android:onClick="onStartTimeClicked"
                     android:background="@android:color/transparent"/>
             </LinearLayout>
@@ -118,7 +120,7 @@
                     android:text="End"
                     android:layout_marginRight="20dp"/>
 
-                <Button
+                <TextView
                     android:id="@+id/edit_text_end_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -126,17 +128,19 @@
                     android:textStyle="normal"
                     android:layout_marginEnd="20dp"
                     android:layout_marginRight="20dp"
-                    android:hint="Select"
+                    android:paddingEnd="20dp"
+                    android:paddingRight="20dp"
+                    android:hint="@string/choose_date"
                     android:onClick="onEndDateClicked"
                     android:background="@android:color/transparent"/>
 
-                <Button
+                <TextView
                     android:id="@+id/edit_text_end_time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical|end"
                     android:textSize="14sp"
-                    android:hint="7:00PM"
+                    android:hint="@string/set_time"
                     android:onClick="onEndTimeClicked"
                     android:background="@android:color/transparent"/>
             </LinearLayout>
