--- a/GiftX/app/src/main/res/layout/activity_group_settings.xml
+++ b/GiftX/app/src/main/res/layout/activity_group_settings.xml
@@ -1,279 +1,217 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    tools:context=".ui.adminSettings.adminSettingsActivity">
 
-    <!-- Toolbar -->
-    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/add_group_bar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:theme="@style/Toolbar" />
-
-    <!-- Group Name EditText-->
-    <EditText
-        android:id="@+id/edit_text_group_title_settings"
+    <LinearLayout
+        android:id="@+id/linear_layout_group_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/primary"
-        android:padding="15dp"
-        android:hint="Enter group name..."
-        android:textColorHint="@android:color/white"
-        android:textColor="@android:color/white"
-        android:textCursorDrawable="@null"
-        android:textSize="24dp" />
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:background="@color/background"
+        android:weightSum="1">
 
-    <!-- ScrollView-->
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white"
-        android:padding="15dp">
 
-        <LinearLayout
+        <!-- Field for Group Title -->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/group_title_in_settings"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
+            app:hintTextAppearance="@style/HintText">
 
-            <!-- Choose Dates-->
-            <LinearLayout
+            <EditText
+                android:id="@+id/edit_text_group_title_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/white"
-                android:gravity="center_vertical"
-                android:layout_marginBottom="15dp">
+                android:hint="@string/hint_group_title"
+                android:inputType="textCapWords"
+                android:padding="@dimen/edit_text_padding"
+                android:textColor="@color/black"
+                android:textColorHint="@color/dark_grey"
+                android:textSize="@dimen/login_buttons_text_size" />
+        </android.support.design.widget.TextInputLayout>
 
-                <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginRight="20dp"
-                    android:textSize="14sp"
-                    android:src="@drawable/clock"/>
+        <!-- Field for Group Description-->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/group_description_settings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
+            app:hintTextAppearance="@style/HintText">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Choose dates"/>
-            </LinearLayout>
-
-            <!-- Start Dates-->
-            <LinearLayout
+            <EditText
+                android:id="@+id/edit_text_group_description_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:paddingBottom="10dp"
-                android:paddingRight="10dp">
+                android:background="@android:color/white"
+                android:hint="@string/hint_group_description"
+                android:inputType="text|textMultiLine"
+                android:maxLength="2000"
+                android:maxLines="10"
+                android:padding="@dimen/edit_text_padding"
+                android:textColor="@color/black"
+                android:textColorHint="@color/dark_grey"
+                android:textSize="@dimen/login_buttons_text_size" />
+        </android.support.design.widget.TextInputLayout>
 
-                <TextView
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"
-                    android:textStyle="normal"
-                    android:text="Start"
-                    android:layout_marginRight="20dp"/>
 
-                <Button
-                    android:id="@+id/edit_text_start_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:textStyle="normal"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginRight="20dp"
-                    android:hint="Select"
-                    android:onClick="onStartDateClicked"
-                    android:background="@android:color/transparent"/>
 
-                <Button
-                    android:id="@+id/edit_text_start_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical|end"
-                    android:textSize="14sp"
-                    android:hint="7:00PM"
-                    android:onClick="onStartTimeClicked"
-                    android:background="@android:color/transparent"/>
-            </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:textColor="@android:color/white"
+            android:text = "Select Matching Date"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:textIsSelectable="false" />
 
-            <!-- Sort Dates -->
-            <LinearLayout
+
+        <DatePicker
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/datePicker_settings"
+            android:theme="@android:style/Theme" />
+
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.13" />
+
+        <TimePicker
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/timePicker_settings"
+            android:layout_gravity="center_horizontal"
+            android:theme="@android:style/Theme" />
+
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.13" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:textColor="@android:color/white"
+            android:text = "Select Event End Date"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:textIsSelectable="false" />
+
+
+        <DatePicker
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/datePicker1_settings"
+            android:theme="@android:style/Theme" />
+
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.13" />
+
+        <TimePicker
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/timePicker1_settings"
+            android:layout_gravity="center_horizontal"
+            android:theme="@android:style/Theme" />
+
+        <!-- Field for price min -->
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_gravity="center_horizontal" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/price_min_in_settings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
+            app:hintTextAppearance="@style/HintText">
+
+            <EditText
+                android:id="@+id/edit_text_price_min_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="20dp"
-                android:paddingRight="10dp"
-                android:background="@drawable/bottom_border">
+                android:background="@android:color/white"
+                android:hint="@string/hint_price_min"
+                android:inputType="textCapWords"
+                android:padding="@dimen/edit_text_padding"
+                android:textColor="@color/black"
+                android:textColorHint="@color/dark_grey"
+                android:textSize="@dimen/login_buttons_text_size" />
+        </android.support.design.widget.TextInputLayout>
 
-                <TextView
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"
-                    android:textStyle="normal"
-                    android:text="End"
-                    android:layout_marginRight="20dp"/>
+        <!-- Field for price max -->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/price_max_in_settings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
+            app:hintTextAppearance="@style/HintText">
 
-                <Button
-                    android:id="@+id/edit_text_end_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:textStyle="normal"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginRight="20dp"
-                    android:hint="Select"
-                    android:onClick="onEndDateClicked"
-                    android:background="@android:color/transparent"/>
-
-                <Button
-                    android:id="@+id/edit_text_end_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical|end"
-                    android:textSize="14sp"
-                    android:hint="7:00PM"
-                    android:onClick="onEndTimeClicked"
-                    android:background="@android:color/transparent"/>
-            </LinearLayout>
-
-            <!-- Group Description-->
-            <LinearLayout
+            <EditText
+                android:id="@+id/edit_text_price_max_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingBottom="20dp"
-                android:background="@drawable/bottom_border">
+                android:background="@android:color/white"
+                android:hint="@string/hint_price_max"
+                android:inputType="textCapWords"
+                android:padding="@dimen/edit_text_padding"
+                android:textColor="@color/black"
+                android:textColorHint="@color/dark_grey"
+                android:textSize="@dimen/login_buttons_text_size" />
+        </android.support.design.widget.TextInputLayout>
+        <!-- Remove Users button -->
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_gravity="center_horizontal" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="10dp"
-                    android:padding="10dp"
-                    android:gravity="center_vertical">
+        <Button
+            android:id="@+id/button_remove_users_settings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/primary"
+            android:text="@string/remove_users"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/login_buttons_text_size"
+            android:clickable="false" />
 
-                    <ImageView
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:src="@drawable/details"
-                        android:layout_marginRight="20dp"/>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="15dp"
+            android:layout_gravity="center_horizontal" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Group description"
-                        android:textSize="14sp"/>
-                </LinearLayout>
-
-                <EditText
-                    android:id="@+id/edit_text_group_description_settings"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:background="@drawable/blackborder"
-                    android:padding="10dp"
-                    android:textSize="14sp"
-                    android:textColor="@color/black"
-                    android:gravity="top|left"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:layout_marginBottom="10dp">
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_marginRight="20dp"
-                        android:src="@drawable/card"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Gift Prices"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:text="Min"
-                        android:textSize="14sp"
-                        android:textColor="@color/black"
-                        android:textCursorDrawable="@null"/>
-
-                    <EditText
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="numberDecimal"
-                        android:ems="10"
-                        android:id="@+id/edit_text_price_min_settings"
-                        android:layout_weight="1"
-                        android:hint="Price"
-                        android:textSize="14sp"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:text="Max"
-                        android:textSize="14sp"
-                        android:textColor="@color/black"
-                        android:textCursorDrawable="@null"/>
-
-                    <EditText
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:inputType="numberDecimal"
-                        android:ems="10"
-                        android:id="@+id/edit_text_price_max_settings"
-                        android:layout_weight="1"
-                        android:hint="Price"
-                        android:textSize="14sp"/>
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <Button
-                    android:id="@+id/button_remove_users_settings"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/primary"
-                    android:text="@string/remove_users"
-                    android:textColor="@android:color/white"
-                    android:textSize="@dimen/login_buttons_text_size"
-                    android:clickable="false" />
-            </LinearLayout>
-
-        </LinearLayout>
-    </ScrollView>
+        <Button
+            android:id="@+id/button_save_edited_group_settings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/primary"
+            android:text="@string/save_edited_group_settings"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/login_buttons_text_size"
+            android:clickable="false" />
 
 
+    </LinearLayout>
 
-
-</LinearLayout>
+</ScrollView>
