--- a/GiftX/app/src/main/res/layout/single_invite.xml
+++ b/GiftX/app/src/main/res/layout/single_invite.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!-- This layout controls the appearance of a single active group object in the List-->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:layout_margin="2dp"
     android:background="@android:color/white"
     android:clickable="false"
@@ -11,37 +11,69 @@
     android:focusable="false"
     android:foreground="?selectableItemBackground"
     android:gravity="center_vertical"
-    android:paddingLeft="16dp"
-    android:paddingStart="16dp">
+    android:padding="10dp"
+    android:orientation="vertical">
 
     <!-- TextView that shows the single ActiveGroup's name-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Invited to join"
+        android:layout_marginBottom="5dp"/>
+
     <TextView
         android:id="@+id/invite_text_view_group_title"
         style="@style/ListItemText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Group Name"
+        android:layout_marginBottom="10dp"/>
 
     <!-- TextView that shows the text "Managed by "-->
-    <TextView
-        android:id="@+id/invited_by"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/invite_text_view_group_title"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="2dp"
-        android:text="Invited to Gift Echange by: "
-        android:textColor="@color/light_black"
-        android:textSize="12sp" />
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
-    <TextView
-        android:id="@+id/text_view_inviter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/invite_text_view_group_title"
-        android:layout_marginTop="2dp"
-        android:layout_toEndOf="@+id/invited_by"
-        android:layout_toRightOf="@+id/invited_by"
-        android:textSize="12sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/invited_by"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/invite_text_view_group_title"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="2dp"
+            android:text="Organized by: "
+            android:textColor="@color/light_black"
+            android:textSize="12sp" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/text_view_inviter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/invite_text_view_group_title"
+            android:layout_toEndOf="@+id/invited_by"
+            android:layout_toRightOf="@+id/invited_by"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:text="User"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text= "\u2022"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"/>
+
+        <TextView
+            android:id="@+id/text_view_email_invite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email"
+            android:textStyle="italic"
+            android:textSize="12sp"/>
+    </LinearLayout>
+
+</LinearLayout>
