final version to be graded

--- a/GiftX/app/src/main/res/layout/fragment_pending_groups_list.xml
+++ b/GiftX/app/src/main/res/layout/fragment_pending_groups_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_fragment_pending_groups"
     android:layout_width="match_parent"
@@ -12,6 +11,8 @@
         android:id="@+id/list_view_pending_groups"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="none" />
+        android:scrollbars="none"
+        android:layout_margin="10dp"
+        android:dividerHeight="15dp"/>
 
 </RelativeLayout>
