--- a/GiftX/app/src/main/res/layout/activity_active_group_details.xml
+++ b/GiftX/app/src/main/res/layout/activity_active_group_details.xml
@@ -1,7 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,105 +17,34 @@
             android:theme="@style/Toolbar" />
 
         <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-
-        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_margin="15dp">
-
-            <Button
-                android:id="@+id/btn_invite_user"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/input_field_height"
-                android:background="@color/primary"
-                android:onClick="onInviteButtonPressed"
-                android:text="@string/invite_user"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/login_buttons_text_size" />
-
-
-            <ListView
-                android:id="@+id/list_view_users"
-                android:layout_width="match_parent"
-                android:layout_height="335dp"
-                android:scrollbars="none"/>
-
-            <Button
-                android:id="@+id/btn_instant_sort"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/input_field_height"
-                android:background="@color/primary"
-                android:onClick="instantSortButton"
-                android:text="Instant Sort"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/login_buttons_text_size" />
-
-            <TextView
-                android:id="@+id/match_email"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/input_field_height"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/login_buttons_text_size" />
-
-
-        </LinearLayout>
-        </ScrollView>
-
-
-    </LinearLayout>
-
-</RelativeLayout>
-    -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/background"
-    tools:context=".ui.activeGroupDetails.ActiveGroupDetailsActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/app_bar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:theme="@style/Toolbar" />
-
-        <ScrollView
-            android:layout_width="wrap_content"
             android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_margin="15dp">
+                android:layout_margin="15dp"
+                android:background="@android:color/white">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/title_days_until_sort"
-                    android:layout_weight="0.03"
-                    android:textSize="30dp"
-                    android:textAlignment="center"
-                    android:textColor="#000000"
-                    android:background="#FFFFFF" />
+                    android:textSize="30sp"
+                    android:gravity="center_horizontal"
+                    android:textColor="@color/black"
+                    android:background="@android:color/white"
+                    android:text="# Days until sort"
+                    android:layout_marginBottom="15dp"/>
 
                 <TextView
-                    android:layout_width="364dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/title_sorting_on"
                     android:id="@+id/title_sorting_on"
-                    android:layout_gravity="center_horizontal"
-                    android:textAlignment="center"
-                    android:textColor="#000000"
-                    android:background="#FFFFFF" />
+                    android:gravity="center_horizontal"
+                    android:textSize="16sp"/>
 
 
                 <TextView
@@ -129,26 +55,22 @@
                     android:paddingTop="5dp"
                     android:paddingLeft="15dp"
                     android:paddingRight="15dp"
-                    android:paddingBottom="15dp"
-                    android:textColor="#000000"
-                    android:background="#FFFFFF" />
+                    android:paddingBottom="15dp" />
 
 
                 <ListView
                     android:id="@+id/list_view_users"
                     android:layout_width="match_parent"
-                    android:layout_height="287dp"
-                    android:scrollbars="none"
-                    android:layout_weight="5.55"
-                    android:background="#FFFFFF" />
+                    android:layout_height="match_parent"
+                    android:scrollbars="none" />
 
                 <Button
                     android:id="@+id/btn_save_blacklist"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/input_field_height"
                     android:background="@color/primary"
-                    android:onClick="onSaveBlacklist"
-                    android:text="Save Preferences"
+                    android:onClick="onClearBlacklist"
+                    android:text="Clear Preferences"
                     android:textColor="@android:color/white"
                     android:textSize="@dimen/login_buttons_text_size" />
 
