--- a/GiftX/app/src/main/res/layout/activity_create_account.xml
+++ b/GiftX/app/src/main/res/layout/activity_create_account.xml
@@ -36,41 +36,19 @@
             android:layout_weight="0.13"
             android:layout_marginBottom="30dp" />
 
-        <!-- Field for First name -->
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/til_user_first_name_create"
+            android:id="@+id/til_username_create"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/lists_title_bottom_margin"
             app:hintTextAppearance="@style/HintText">
 
             <EditText
-                android:id="@+id/edit_text_first_name_create"
+                android:id="@+id/edit_text_username_create"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/white"
-                android:hint="@string/hint_enter_first_name"
-                android:inputType="textCapWords"
-                android:padding="@dimen/edit_text_padding"
-                android:textColor="@color/black"
-                android:textColorHint="@color/dark_grey"
-                android:textSize="@dimen/login_buttons_text_size" />
-        </android.support.design.widget.TextInputLayout>
-
-        <!-- Field for Last name-->
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/til_user_last_name_create"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
-            app:hintTextAppearance="@style/HintText">
-
-            <EditText
-                android:id="@+id/edit_text_user_last_name_create"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/white"
-                android:hint="@string/hint_enter_last_name"
+                android:hint="@string/hint_enter_full_name"
                 android:inputType="textCapWords"
                 android:padding="@dimen/edit_text_padding"
                 android:textColor="@color/black"
@@ -133,7 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/white"
-                android:hint="@string/hint_enter_password"
+                android:hint="@string/hint_confirm_password"
                 android:inputType="textPassword"
                 android:padding="@dimen/edit_text_padding"
                 android:textColor="@color/black"
@@ -147,7 +125,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/input_field_height"
             android:background="@color/primary"
-            android:onClick="onCreateAccountPressed"
+            android:onClick="createNewAccount"
             android:text="@string/title_activity_create_account"
             android:textColor="@android:color/white"
             android:textSize="@dimen/login_buttons_text_size" />
