--- a/GiftX/app/src/main/res/layout/activity_create_group.xml
+++ b/GiftX/app/src/main/res/layout/activity_create_group.xml
@@ -1,220 +1,284 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    tools:context=".ui.activeGroups.CreateGroupActivity">
+    android:layout_width="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/linear_layout_create_group_activity"
+    <!-- Toolbar -->
+    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/add_group_bar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/Toolbar" />
+
+    <!-- Group Name EditText-->
+    <EditText
+        android:id="@+id/edit_text_group_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:background="@color/background"
-        android:weightSum="1">
+        android:layout_gravity="center_horizontal"
+        android:background="@color/primary"
+        android:padding="15dp"
+        android:hint="Enter group name..."
+        android:textColorHint="@android:color/white"
+        android:textColor="@android:color/white"
+        android:textCursorDrawable="@null"
+        android:textSize="24dp" />
 
-        <!-- Display logo -->
-        <ImageView
-            android:layout_width="152dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView1"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/ic_logo"
-            android:layout_weight="0.13"
-            android:layout_marginBottom="30dp" />
+    <!-- ScrollView-->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:padding="15dp">
 
-        <!-- Field for Group Title -->
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/group_title"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
-            app:hintTextAppearance="@style/HintText">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/edit_text_group_title"
+            <!-- Choose Dates-->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/white"
-                android:hint="@string/hint_group_title"
-                android:inputType="textCapWords"
-                android:padding="@dimen/edit_text_padding"
-                android:textColor="@color/black"
-                android:textColorHint="@color/dark_grey"
-                android:textSize="@dimen/login_buttons_text_size" />
-        </android.support.design.widget.TextInputLayout>
+                android:gravity="center_vertical"
+                android:layout_marginBottom="15dp">
 
-        <!-- Field for Group Description-->
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/group_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
-            app:hintTextAppearance="@style/HintText">
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginRight="20dp"
+                    android:textSize="14sp"
+                    android:src="@drawable/clock"/>
 
-            <EditText
-                android:id="@+id/edit_text_group_description"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Choose dates"/>
+            </LinearLayout>
+
+            <!-- Start Dates-->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@android:color/white"
-                android:hint="@string/hint_group_description"
-                android:inputType="text|textMultiLine"
-                android:maxLength="2000"
-                android:maxLines="10"
-                android:padding="@dimen/edit_text_padding"
-                android:textColor="@color/black"
-                android:textColorHint="@color/dark_grey"
-                android:textSize="@dimen/login_buttons_text_size" />
-        </android.support.design.widget.TextInputLayout>
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingBottom="10dp"
+                android:paddingRight="10dp">
 
+                <TextView
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:textStyle="normal"
+                    android:text="Start"
+                    android:layout_marginRight="20dp"/>
 
+                <TextView
+                    android:id="@+id/edit_text_start_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:textStyle="normal"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
+                    android:paddingEnd="20dp"
+                    android:paddingRight="20dp"
+                    android:hint="@string/choose_date"
+                    android:onClick="onStartDateClicked"
+                    android:background="@android:color/transparent"/>
 
-            <TextView
+                <TextView
+                    android:id="@+id/edit_text_start_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical|end"
+                    android:textSize="14sp"
+                    android:hint="@string/set_time"
+                    android:onClick="onStartTimeClicked"
+                    android:background="@android:color/transparent"/>
+            </LinearLayout>
+
+            <!-- Sort Dates -->
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:textColor="@android:color/white"
-                android:text = "Select Matching Date"
-                android:textSize="20sp"
-                android:textAlignment="center"
-                android:textIsSelectable="false" />
-
-
-            <DatePicker
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/datePicker"
-                android:theme="@android:style/Theme" />
+                android:orientation="horizontal"
+                android:paddingBottom="20dp"
+                android:paddingRight="10dp"
+                android:background="@drawable/bottom_border">
 
+                <TextView
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:textStyle="normal"
+                    android:text="End"
+                    android:layout_marginRight="20dp"/>
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="0.13" />
+                <TextView
+                    android:id="@+id/edit_text_end_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:textStyle="normal"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginRight="20dp"
+                    android:paddingEnd="20dp"
+                    android:paddingRight="20dp"
+                    android:hint="@string/choose_date"
+                    android:onClick="onEndDateClicked"
+                    android:background="@android:color/transparent"/>
 
-        <TimePicker
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/timePicker"
-                android:layout_gravity="center_horizontal"
-                android:theme="@android:style/Theme" />
+                <TextView
+                    android:id="@+id/edit_text_end_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical|end"
+                    android:textSize="14sp"
+                    android:hint="@string/set_time"
+                    android:onClick="onEndTimeClicked"
+                    android:background="@android:color/transparent"/>
+            </LinearLayout>
 
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="0.13" />
-
-        <TextView
+            <!-- Group Description-->
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:textColor="@android:color/white"
-                android:text = "Select Event End Date"
-                android:textSize="20sp"
-                android:textAlignment="center"
-                android:textIsSelectable="false" />
-
-
-            <DatePicker
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/datePicker1"
-                android:theme="@android:style/Theme" />
+                android:orientation="vertical"
+                android:paddingBottom="20dp"
+                android:background="@drawable/bottom_border">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:padding="10dp"
+                    android:gravity="center_vertical">
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="0.13" />
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/details"
+                        android:layout_marginRight="20dp"/>
 
-        <TimePicker
-                android:layout_width="wrap_content"
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Group description"
+                        android:textSize="14sp"/>
+                </LinearLayout>
+
+                <EditText
+                    android:id="@+id/edit_text_group_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:background="@drawable/blackborder"
+                    android:padding="10dp"
+                    android:textSize="14sp"
+                    android:textColor="@color/black"
+                    android:gravity="top|left"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/timePicker1"
-                android:layout_gravity="center_horizontal"
-                android:theme="@android:style/Theme" />
+                android:layout_marginTop="15dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_marginBottom="10dp">
+
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginRight="20dp"
+                        android:src="@drawable/card"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Gift Prices"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:text="Min"
+                        android:textSize="14sp"
+                        android:textColor="@color/black"
+                        android:textCursorDrawable="@null"/>
+
+                    <EditText
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberDecimal"
+                        android:ems="10"
+                        android:id="@+id/edit_text_price_min"
+                        android:layout_weight="1"
+                        android:hint="Price"
+                        android:textSize="14sp"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:text="Max"
+                        android:textSize="14sp"
+                        android:textColor="@color/black"
+                        android:textCursorDrawable="@null"/>
+
+                    <EditText
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberDecimal"
+                        android:ems="10"
+                        android:id="@+id/edit_text_price_max"
+                        android:layout_weight="1"
+                        android:hint="Price"
+                        android:textSize="14sp"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <Button
+                        android:id="@+id/button_remove_users_settings"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/primary"
+                        android:text="@string/remove_users"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/login_buttons_text_size"
+                        android:clickable="false" />
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 
 
-        <!--
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/input_field_height"
-            android:layout_weight="0.04">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android font/>
+</LinearLayout>
 
-            <Button
-                android:id="@+id/btn_select_sort_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/primary_dark"
-                android:onClick="onCreateGroupPressed"
-                android:text="Select \n Matching Date"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/login_buttons_text_size"
-                android:clickable="false"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/input_field_height"
-            android:layout_weight="0.04">
-
-
-
-            <Button
-                android:id="@+id/btn_select_end_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/primary_dark"
-                android:onClick="onCreateGroupPressed"
-                android:text="Select \n Event End Date"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/login_buttons_text_size"
-                android:clickable="false"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
-
-        </RelativeLayout>
-
-        -->
-
-        <!-- Create Group button -->
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_gravity="center_horizontal" />
-
-        <Button
-            android:id="@+id/btn_create_group_final"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/primary"
-            android:onClick="onCreateGroupPressed"
-            android:text="@string/create_group"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/login_buttons_text_size"
-            android:clickable="false" />
-
-
-    </LinearLayout>
-
-</ScrollView>
