--- a/GiftX/app/src/main/res/layout/activity_login.xml
+++ b/GiftX/app/src/main/res/layout/activity_login.xml
@@ -5,27 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".ui.login.LoginActivity">
+    tools:context=".ui.login.LoginActivity"
+    android:background="@drawable/background_loginscreen">
 
     <LinearLayout
         android:id="@+id/linear_layout_login_activity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center|bottom"
         android:orientation="vertical"
         android:paddingBottom="16dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingTop="16dp"
-        android:background="@drawable/background_loginscreen">
+        android:paddingTop="16dp">
 
-        <LinearLayout
-            android:layout_width="0px"
-            android:layout_height="0px"
-            android:focusable="true"
-            android:focusableInTouchMode="true" />
+        <!--<LinearLayout-->
+        <!--android:layout_width="0px"-->
+        <!--android:layout_height="0px"-->
+        <!--android:focusable="true"-->
+        <!--android:focusableInTouchMode="true" />-->
 
-        <!-- Slogan -->
+        <!--Slogan -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,8 +33,7 @@
             android:contentDescription=""
             android:text="@string/app_slogan"
             android:textSize="20sp"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="200dp" />
+            android:textColor="@android:color/white" />
 
         <!-- Email EditText -->
         <android.support.design.widget.TextInputLayout
@@ -95,11 +94,18 @@
             android:text="@string/button_signin_with_password"
             android:textColor="@android:color/white" />
 
+        <!-- Google login button -->
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/login_with_google"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <!-- Create account link -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_small"
+            android:layout_marginBottom="10dp"
             android:gravity="center"
             android:orientation="horizontal">
 
