--- a/GiftX/app/src/main/res/layout/activity_post_sort.xml
+++ b/GiftX/app/src/main/res/layout/activity_post_sort.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,11 +31,9 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/imageView2"
-        android:layout_centerVertical="true"
         android:background="#ffffff"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView"
-        android:layout_marginTop="20dp" />
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/textView" />
 
     <Button
         android:id="@+id/btn_view_profile"
@@ -61,6 +58,7 @@
         android:layout_alignEnd="@+id/textView"
         android:layout_alignTop="@+id/imageView2"
         android:layout_alignBottom="@+id/imageView2"
+        android:textSize="25sp"
         android:background="#FFFFFF"
         android:text="Firstname Lastname"
         android:textAlignment="center" />
