--- a/GiftX/app/src/main/res/layout/dialog_add_group.xml
+++ b/GiftX/app/src/main/res/layout/dialog_add_group.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    tools:context="cse110.giftx.ui.MainActivity">
+    tools:context="cse110.giftX.ui.MainActivity">
 
     <EditText
         android:id="@+id/edit_text_group_name"
