--- a/GiftX/app/src/main/res/layout/fragment_about.xml
+++ b/GiftX/app/src/main/res/layout/fragment_about.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/infoDisplay"
+        android:padding="15dp"
         android:hint="No Information Available"
         android:layout_gravity="center_horizontal"
         android:background="@android:color/white"
