--- a/GiftX/app/src/main/res/layout/single_user.xml
+++ b/GiftX/app/src/main/res/layout/single_user.xml
@@ -1,59 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!-- This layout controls the appearance of a single active group object in the List-->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:layout_margin="2dp"
+    android:layout_height="wrap_content"
+    android:padding="10dp"
     android:background="@android:color/white"
     android:clickable="false"
     android:descendantFocusability="blocksDescendants"
     android:focusable="false"
     android:foreground="?selectableItemBackground"
-    android:gravity="center_vertical"
-    android:paddingLeft="16dp"
-    android:paddingStart="16dp">
+    android:orientation="horizontal"
+    android:gravity="center_vertical">
+
+    <ImageView
+        android:id="@+id/profile_pic_single"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginRight="15dp"/>
 
     <!-- TextView that shows the single ActiveGroup's name-->
-    <TextView
-        android:id="@+id/text_user_name"
-        style="@style/ListItemText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-    <!-- TextView that shows the text "Managed by "-->
-    <TextView
-        android:id="@+id/user_email"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/text_user_name"
-        android:layout_marginEnd="4dp"
-        android:layout_marginRight="2dp"
-        android:text="email"
-        android:textColor="@color/light_black"
-        android:textSize="12sp" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/text_view_user_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/text_user_name"
-        android:layout_marginTop="2dp"
-        android:layout_toEndOf="@+id/user_email"
-        android:layout_toRightOf="@+id/user_email"
-        android:textSize="12sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/text_user_name"
+            style="@style/ListItemText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="User's Name"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <!-- TextView that shows the email -->
+            <TextView
+                android:id="@+id/user_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Email"
+                android:textColor="@color/light_black"
+                android:textSize="12sp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"/>
+
+            <TextView
+                android:id="@+id/text_view_user_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:text="user@email.com"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
 
     <CheckBox
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/checkBox"
-        android:layout_marginRight="42dp"
-        android:layout_marginEnd="42dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp"
         android:checked="false"
         android:buttonTint="@color/black"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_gravity="end" />
 
-</RelativeLayout>
+</LinearLayout>
