--- a/GiftX/app/src/main/res/values/styles.xml
+++ b/GiftX/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     </style>
 
     <style name="FAB">
-        <item name="android:layout_margin">15dp</item>
+        <item name="android:layout_margin">10dp</item>
         <item name="fabSize">normal</item>
         <item name="rippleColor">@android:color/white</item>
         <item name="backgroundTint">@color/primary</item>
@@ -45,8 +45,10 @@
         <item name="android:clickable">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="datePickerDialogStyle">
+        <item name="android:textColor">@color/black</item>
+    </style>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 
 </resources>
