--- a/GiftX/app/src/main/res/values/themes.xml
+++ b/GiftX/app/src/main/res/values/themes.xml
@@ -12,16 +12,44 @@
         <item name="colorAccent">@color/accent</item>
 
         <item name="android:colorBackground">@color/primary</item>
-        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
         <item name="android:textColorSecondary">#fcfcfc</item>
+
+        <item name="android:textViewStyle">@style/RobotoTextViewStyle</item>
+        <item name="buttonStyle">@style/RobotoButtonStyle</item>
 
     </style>
 
     <style name ="Toolbar" parent="Widget.AppCompat.Light.ActionBar">
         <item name="android:background">@color/primary</item>
         <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textViewStyle">@style/RobotoTextViewStyle</item>
+        <item name="buttonStyle">@style/RobotoButtonStyle</item>
+    </style>
+
+    <style name="profile_toolbar" parent="Widget.AppCompat.Light.ActionBar">
+        <item name="android:background">@android:color/white</item>
+        <item name="android:textColorPrimary">@color/primary</item>
+        <item name="android:textColorSecondary">@color/primary</item>
+        <item name="android:colorAccent">@color/accent</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textViewStyle">@style/RobotoTextViewStyle</item>
+        <item name="buttonStyle">@style/RobotoButtonStyle</item>
     </style>
 
     <style name="CustomTheme.Dialog" parent="Theme.AppCompat.Light.Dialog">
     </style>
+
+    <style name="RobotoTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:fontFamily">sans-serif-light</item>
+    </style>
+
+    <style name="RobotoButtonStyle" parent="android:Widget.Holo.Button">
+        <item name="android:fontFamily">sans-serif-light</item>
+    </style>
+
+    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">24sp</item>
+    </style>
+
 </resources>
